--- a/Style.css
+++ b/Style.css
@@ -31,10 +31,12 @@
     bottom: 0;
     right: 0;
     padding: 4px 8px;
+    font-family: "Lucida Console", Lucida, monospace;
 }
 .info{
     padding: 8px;
     color: #3d245c;
+    font-family: "Sofia", sans-serif;
 }
 .listing{
     display: flex;
@@ -45,10 +47,12 @@
 .price{
     font-size: 24px;
     font-weight: bold;
+    font-family: serif;
 }
 .address{
     font-weight: bold;
     margin-bottom: 4px;
+    font-family: sans-serif;
 }
 .type{
     font-size: 12px;
